--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   vspace="5" hspace="5">
 <h2 style="position: relative;text-align: center;">E-150 Сахарный колер ,карамель </h2>
   <h2>Пищевая добавка “сахарный колер” – возможно, один из самых древних красителей и подсластителей, известных человеку. С того самого момента, как начал производиться сахар, человек начал изучать его свойства и попробовал его нагревать, получив в итоге карамель.Чаще всего коллер исполбзуется в кондитерской продукции.</h2>
-  <h2>Вывод:Безопасен</h2><br><br><br>	
+  <h2>Вывод:Безопасен</h2><br><br><br><br><br>	
   <hr>
 </body>
 </html>
